Fixed flickering issue when dragging and dropping by reimplementing the filterHandler function

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,12 @@
-* {
+*, *:focus {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  outline: none;
+}
+
+.invisible{
+  display: none;
 }
 
 /* Background for the entire page */
@@ -100,6 +105,11 @@ body {
   cursor: pointer;
   border: 0;
   border-radius: 0.5rem;
+  outline: none;
+}
+
+.filter:focus{
+  outline: none;
 }
 
 /* Box containing the selector for button adding purpose*/
